# kotoba

./: .gitignore  MASTER_PLAN.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: tutor-prompt.md
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  scoring_config.json  tauri.conf.json
src-tauri/binaries/: mock-whisper-cli.rs
src-tauri/migrations/: 0001_init.sql  0002_settings.sql  0003_attempt_feedback.sql
src-tauri/seed/: vocabulary_en.json  vocabulary_ja.json
src-tauri/share/piper/dicts/: cmudict_data.json  pinyin_phrases.json  pinyin_single.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  sidecar_lifecycle.rs  stt.rs  tts.rs
src-tauri/src/commands/: mod.rs  onboarding.rs  practice.rs  session.rs  settings.rs  tts.rs  tutor.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/llm/: client.rs  daemon_waker.rs  honesty_gate.rs  mod.rs
src-tauri/src/models/: catalog.rs  downloader.rs  mod.rs
src-tauri/src/scoring/: composition.rs  g2p.rs  levenshtein.rs  mod.rs  phonemic.rs
src-tauri/tests/: pitch_poc.rs
src/components/onboarding/: ConsentForm.tsx  ModelDownloader.tsx  PrerequisiteCheck.tsx
src/components/practice/: AudioControls.tsx  FeedbackPanel.tsx  ScoreDisplay.tsx  WordDisplay.tsx
src/components/settings/: ModelManager.tsx
src/hooks/: useAudioCapture.ts  useModelStatus.ts  usePracticeSession.ts
src/lib/: invoke.ts  types.ts
src/pages/: History.tsx  Onboarding.tsx  Practice.tsx  Settings.tsx
src/store/: session.ts
(+3 files in other folders)
